Add /user/me/limits endpoint
Add endpoint scopes to csv
Add test
Update changelog
Add endpoint to spec
